# resume_website

./: .gitignore  Dockerfile  README.md  entrypoint.sh  mix.exs  pyproject.toml
.github/workflows/: docker-image.yml
app/: api_v1.py  app.py  html_v1.py
app/json/: bio_en.json  bio_it.json
app/templates/resume/: index.html
assets/yaml/: bio_en.yaml  bio_it.yaml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
helm/resume-website/: Chart.yaml  cluster-issuer-example.yaml  values.yaml
helm/resume-website/templates/: web-deployment.yaml
lib/: resume_website.ex  resume_website_2022.ex  resume_website_2022_web.ex  resume_website_web.ex
lib/resume_website/: application.ex  mailer.ex
lib/resume_website_2022/: application.ex  mailer.ex
lib/resume_website_2022_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/resume_website_2022_web/controllers/: page_controller.ex
lib/resume_website_2022_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
lib/resume_website_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/resume_website_web/controllers/: api_controller.ex  page_controller.ex
lib/resume_website_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
test/resume_website_2022_web/controllers/: page_controller_test.exs
test/resume_website_2022_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/resume_website_web/controllers/: page_controller_test.exs
test/support/: conn_case.ex
tests/: conftest.py  test_browser.py  test_index.py
(+6 files in other folders)
