[tool.poetry]
name = "resume_website"
version = "1.0.5"
description = "Resume Website"
authors = ["Matteo De Ponti <teo@maculade.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Babel = "^2.12.1"
click = "^8.1.3"
Flask = "^2.2.3"
flask-babel = "^3.0.1"
Flask-Cors = "^3.0.10"
Flask-Session = "^0.4.0"
gunicorn = "^22.0.0"
isort = "^5.12.0"
pytest = "^7.2.2"
requests = "^2.31.0"
selenium = "^4.8.2"
black = "^23.1.0"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
